# general_expl

./: README.md
ego_planner_swarm/kr_mav_control/interfaces/kr_python_interface/: CMakeLists.txt
ego_planner_swarm/kr_mav_control/kr_mav_controllers/src/: PIDControl.cpp  SO3Control.cpp  pid_control_nodelet.cpp
ego_planner_swarm/kr_mav_control/kr_mav_launch/: CMakeLists.txt
ego_planner_swarm/kr_mav_control/kr_quadrotor_simulator/config/: hummingbird_params.yaml
ego_planner_swarm/mav_simulator/: CMakeLists.txt  package.xml
ego_planner_swarm/mav_simulator/config/: gazebo.rviz
ego_planner_swarm/mav_simulator/launch/: algorithm.xml  cx.launch  gazebo.launch  single_tmux_spawn.xml  tmux_control.launch  tmux_gazebo_sim.launch  tmux_spawn.launch
ego_planner_swarm/mav_simulator/scripts/: exploration.txt  exploration_manager.txt  tmux_sim.sh
ego_planner_swarm/mav_simulator/worlds/: cx_cafe.world  cx_cafe_fix.world  cx_cafe_fix_multip.world  cx_cafe_fix_random.world  cx_cafe_mod.world  cx_cafe_small.world  cx_cafe_small_fix.world  cx_office_big.world  forest.world  small_office_only_with_person.world  small_office_with_person.world  swarm_exp.world  swarm_exp_m1.world  swarm_exp_m2.world
ego_planner_swarm/mrsl_quadrotor/mrsl_mobile_object/: CMakeLists.txt
ego_planner_swarm/mrsl_quadrotor/mrsl_models/: CMakeLists.txt
ego_planner_swarm/mrsl_quadrotor/mrsl_quadrotor_launch/launch/: controller.launch
ego_planner_swarm/mrsl_quadrotor/mrsl_quadrotor_simulator/: CMakeLists.txt
ego_planner_swarm/mrsl_quadrotor/mrsl_quadrotor_utils/: CMakeLists.txt
ego_planner_swarm/planner/plan_env/include/plan_env/: grid_map.h
ego_planner_swarm/planner/plan_manage/: CMakeLists.txt  package.xml
ego_planner_swarm/planner/plan_manage/launch/: advanced_param.xml  default.rviz  run_in_sim.launch  simulator.xml  swarm.launch
ego_planner_swarm/planner/plan_manage/scripts/: init_pub.py  pcl_depth_pub.py  pub_goal.py  tmux_sim.sh
ego_planner_swarm/planner/plan_manage/src/: ego_replan_fsm.cpp  traj_server.cpp
ego_planner_swarm/qflight_descriptions/: CMakeLists.txt
ego_planner_swarm/qflight_descriptions/kr_mav_control/interfaces/kr_qualcomm_interface/launch/: snav_interface.launch
ego_planner_swarm/qflight_descriptions/kr_mav_control/kr_mav_msgs/: CMakeLists.txt
ego_planner_swarm/qflight_descriptions/kr_mav_control/kr_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
ego_planner_swarm/qflight_descriptions/kr_mav_control/rqt_mav_manager/: CMakeLists.txt
ego_planner_swarm/qflight_descriptions/kr_mav_control/trackers/kr_tracker_msgs/: CMakeLists.txt
ego_planner_swarm/qflight_descriptions/mrsl_quadrotor/mrsl_quadrotor_launch/: CMakeLists.txt
ego_planner_swarm/qflight_descriptions/mrsl_quadrotor/mrsl_quadrotor_launch/launch/: spawn.launch
ego_planner_swarm/qflight_descriptions/urdf/: 230.urdf.xacro  board_mounts.yaml  ddk.urdf.xacro  sdf_pro_imu1.urdf  sdf_pro_imu1.urdf.xacro  starling.urdf.xacro
ego_planner_swarm/uav_simulator/so3_control/: CMakeLists.txt
ego_planner_swarm/uav_simulator/so3_control/config/: gains_hummingbird.yaml
ego_planner_swarm/uav_simulator/so3_control/include/so3_control/: SO3Control.h
ego_planner_swarm/uav_simulator/so3_control/src/: SO3Control.cpp  so3_control_nodelet.cpp
explore_scanner/: CMakeLists.txt  package.xml
explore_scanner/include/explore_scanner/: explore_scanner_data.h  explore_scanner_fsm.h  explore_scanner_manager.h
explore_scanner/launch/: explore_scan.launch
explore_scanner/src/: explore_scanner_fsm.cpp  explore_scanner_manager.cpp  explore_scanner_node.cpp
grid_cover_planner/: CMakeLists.txt  package.xml
grid_cover_planner/config/: coverage_display.rviz  polygon.rviz
grid_cover_planner/include/grid_cover_planner/: grid_cover_planner.h
grid_cover_planner/include/polygon_drawer/: polygon_drawer.h
grid_cover_planner/launch/: grid_cover_planner.launch
grid_cover_planner/src/: grid_cover_planner.cpp  grid_cover_planner_node.cpp  polygon_drawer.cpp
rviz_polygon_plugin/: CMakeLists.txt  README.md  package.xml  plugin.xml
rviz_polygon_plugin/include/: polygon_draw_plugin.h
rviz_polygon_plugin/src/: polygon_draw_plugin.cpp
