<?xml version="1.0"?>
<package format="2">
  <name>explore_scanner</name>
  <version>0.0.1</version>
  <description>Exploration and object scanning system</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cover_planner</build_depend>
  <build_depend>bspline_opt</build_depend>
  <build_depend>traj_utils</build_depend>
  <build_depend>plan_env</build_depend>
  <build_depend>ego_planner</build_depend>

  <!-- exec dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>cover_planner</exec_depend>
  <exec_depend>bspline_opt</exec_depend>
  <exec_depend>traj_utils</exec_depend>
  <exec_depend>plan_env</exec_depend>
  <exec_depend>ego_planner</exec_depend>

  <export>
  </export>
</package>

