<?xml version="1.0"?>
<package format="2">
  <name>rviz_polygon_plugin</name>
  <version>1.0.0</version>
  <description>RViz plugin for manually drawing polygons</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rviz</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>qtbase5-dev</depend>
  
  <build_depend>qt5-qmake</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-gui</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  
  <export>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>